<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Insumos_act">

    <androidx.cardview.widget.CardView
        android:layout_width="358dp"
        android:layout_height="613dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button2"
                android:layout_width="272dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#2A4BAC"
                android:onClick="Calcular"
                android:text="@string/calcular"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rt" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="305dp"
                android:layout_height="27dp"
                android:layout_marginTop="24dp"
                android:text="@string/bienvenido_a_biofit"
                android:textColor="#009688"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="309dp"
                android:layout_height="94dp"
                android:layout_marginTop="24dp"
                android:text="@string/bienvenido_a_biofit_la_herramienta_m_vil_definitiva_del_fitness_que_le_ayudar_a_gestionar_distintos_tipos_de_insumos_y_elementos_necesarios_para_el_desarrollo_y_la_biolog_a_del_ser_humano"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Spinner
                android:id="@+id/spnInsumos"
                android:layout_width="303dp"
                android:layout_height="55dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/result"
                android:layout_width="303dp"
                android:layout_height="102dp"
                android:layout_marginTop="24dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spnInsumos" />

            <RatingBar
                android:id="@+id/rt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>